Revision history for Perl extension {{$dist->name}}

{{$NEXT}}

1.30      2025-08-04 14:01:25 -0600
  - Documentation improvements (#42)
  - Fix bug where implicit function export would happen regardless of which
    functions were explicitly exported (gh#45, gh#46)

1.29      2021-05-13 09:17:30 -0600
  - Production release identical to 1.28_01 release.

1.28_01   2021-05-10 10:12:22 -0600
  - Added script_fails and program_fails functions (brainbuz++ gh#34, gh#38)

1.27      2021-02-17 13:15:57 -0700
  - Documentation improvements (RRWO++ gh#31, gh#30)

1.26      2019-10-25 21:22:03 -0700
  - Add program_runs and related functions for testing programs
    that do not run under Perl (gh#26, gh#27)

1.25      2018-09-27 15:33:19 -0400
  - Production release identical to 1.24_01 release.

1.24_01   2018-09-24 12:38:07 -0400
  - Add interpreter_options to script_runs options

1.23      2017-07-18 03:12:24 -0400
  - Production release identical to 1.22_01 release.

1.22_01   2017-07-14 07:21:00 -0400
  - Fix testing failures on Windows introduced in 1.21_01

1.21_01   2017-07-13 13:37:09 -0400
  - Migrate to using Test2::V0 internally

1.20      2017-07-13 11:17:42 -0400
  - Production release identical to 1.19_08 release.

1.19_08   2017-07-12 08:22:41 -0400
  - Diagnostic release

1.19_07   2017-07-12 07:53:55 -0400
  - Diagnostic release

1.19_06   2017-07-11 05:34:30 -0400
  - Diagnostic release

1.19_05   2017-07-09 11:35:59 -0400
  - Diagnostic release

1.19_04   2017-07-07 16:26:41 -0400
  - Add support for stdin option that was lost in the Capture::Tiny migration
  - Officially drop support for Perl 5.6 (support for 5.6 was already
    implicitly dropped when we migrated to Capture::Tiny).
  - A near term future version will also drop support for the old pre-Test2
    Test::Builder.

1.19_03   2017-07-07 10:14:25 -0400
  - Use Test2::V0 instead of Test2::Bundle::Extended for Test2 tests

1.19_02   2017-06-21 17:06:47 -0400
  - Identical to 1.19_01
