@@ -1,6 +1,8 @@
 Revision history for Perl extension {{$dist->name}}
 
 {{$NEXT}}
+  - Fix bug introduced in 1.30 where exports were not happening correctly
+    in legacy mode (gh#47)
 
 1.30      2025-08-04 14:01:25 -0600
   - Documentation improvements (#42)
